--- a/css/estilo.css
+++ b/css/estilo.css
@@ -140,7 +140,7 @@
                 }
                 
                 #Sobre-interno p {
-                    text-align: justify;
+                    text-align: center;
                     width: 60%;
                 }
                 
